--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -62,6 +62,53 @@ body{
     height: 100%;
 }
 
+/*ÁREA DO MODAL (POPUP)*/
+.dialog{
+    width: 1200px;
+    height: 320px;
+    border: 5px solid darkred;
+    border-radius: 30px;
+    font-size: 22px;
+    font-family: sans-serif;
+    overflow: auto;
+    z-index: 10;
+}
+
+.botao_fecharDialog{
+    border: 4px solid darkred;
+    margin-left: 95%;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-weight: bolder;
+}
+
+.paragrafo_dialog{
+    margin-top: -20px;
+}
+
+.botao_audioDialog{
+    margin-left: 48%;
+    background-color: lightgray;
+    border-radius: 30px;
+    border: none;
+    width: 80px;
+    height: 80px;
+}
+
+.img_audioDialog{
+    border-radius: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+.botao_fecharDialog:hover{
+    background-color: darkgray;
+}
+
+.botao_audioDialog:hover{
+    background-color: darkgray;
+}
 
 /*ÁREA "REQUISITOS"*/
 #conteinner_requisitos{
@@ -160,7 +207,6 @@ body{
     margin-left: 300px;
     width: 80px;
     height: 80px;
-
 }
 
 .img_audio{
@@ -342,6 +388,26 @@ body{
         width: 100%;
     }
 
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 250px;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
+    }
+
  /*ÁREA DOS REQUISITOS*/   
     #conteinner_requisitos{
         background-color: transparent;
@@ -498,6 +564,26 @@ body{
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
         width: 100%;
+    }
+
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 300px;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
     }
 
 /*ÁREA DOS REQUISITOS*/   
@@ -658,7 +744,7 @@ body{
         width: 100%;
     }
 
-    /*ÁREA DOS REQUISITOS*/   
+/*ÁREA DOS REQUISITOS*/   
     #conteinner_requisitos{
         background-color: transparent;
         flex-direction: column;
@@ -666,6 +752,26 @@ body{
         gap: 150px;
         margin-bottom: 900px;
         padding: 0;
+    }
+
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 320px;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
     }
 
 /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
@@ -793,7 +899,27 @@ body{
     #barra_inicial{
         width: 100%;
         margin-bottom: 60px;
-    }   
+    }
+    
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 350px;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
+    }
 
 /*ÁREA DO BANNER*/
     #banner{
@@ -819,7 +945,7 @@ body{
         width: 100%;
     }
 
-    /*ÁREA DOS REQUISITOS*/   
+/*ÁREA DOS REQUISITOS*/   
     #conteinner_requisitos{
         background-color: transparent;
         flex-direction: column;
@@ -963,7 +1089,7 @@ body{
         height: 500px;
     }
 
-    /*ÁREA DOS REQUISITOS*/   
+/*ÁREA DOS REQUISITOS*/   
     #conteinner_requisitos{
         background-color: transparent;
         width: 100%;
