--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -102,6 +102,14 @@ body{
     height: 50px;
 }
 
+.icon_pausa {
+    display: none;
+    border-radius: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+
 .botao_fecharDialog:hover{
     background-color: darkgray;
 }
