--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -162,7 +162,7 @@ body{
     height: 50px;
 }
 
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
 #conteinner_informacoes{
     display: flex;
     align-items: center;
@@ -170,9 +170,8 @@ body{
     width: 1200px;
     height: 100%;
     gap: 100px;
-    margin-bottom: 1100px;
+    margin-bottom: 1450px;
 }
-
 
 .title_secao{
     text-align: center;
@@ -226,33 +225,6 @@ body{
     background-color: darkgrey;
 }
 
-#area_textoEsquerda{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: darkred;
-    color: white;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    width: 600px;
-    height: 100%;
-    font-size: 25px;
-    font-family: sans-serif;
-}
-
-#area_textoDireita{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: lightgray;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    width: 600px;
-    height: 100%;
-    font-size: 25px;
-    font-family: sans-serif;
-}
-
 .texto{
     margin-top: -20px;
     overflow: auto;
@@ -270,19 +242,54 @@ body{
 .img_informacao{
     width: 420px;
     height: 100%;
-    border-radius: 30px;
 }
 
-#img_informacaoEsquerda{
-    width: 300px;
+/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+#conteinner_impedimentos{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 1200px;
     height: 100%;
-    border-radius: 30px;
+    gap: 100px;
+    margin-bottom: 380px;
 }
 
-#img_informacaoDireita{
-    width: 300px;
-    height: 100%;
+.impedimento{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 450px;
     border-radius: 30px;
+    background-color: lightgray;
+}
+
+.areaTexto_impedimento{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: darkred;
+    color: white;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    width: 600px;
+    height: 100%;
+    font-size: 25px;
+    font-family: sans-serif;
+}
+
+.areaImg_impedimento{
+    display: flex;
+    background-color: lightgrey;
+    justify-content: center;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    width: 600px;
+}
+
+.img_impedimento{
+    width: 420px;
+    height: 100%;
 }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
@@ -426,11 +433,11 @@ body{
         padding: 0;
     }
     
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
     #conteinner_informacoes{
         width: 100%;
-        gap: 400px;
-        margin-bottom: 2770px;
+        gap: 200px;
+        margin-bottom: 3050px;
     }
 
     .title_secao{
@@ -443,6 +450,14 @@ body{
         height: 600px;
     }
 
+    #informacao2{
+        margin-bottom: 100px;
+    }
+
+    #informacao3{
+        margin-bottom: 180px;
+    }
+
     .area_texto{
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -451,24 +466,6 @@ body{
         width: 100%;
         font-size: 22px;
         margin-bottom: 180px;
-    }
-
-    #area_textoEsquerda{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        border-bottom: none;
-    }
-
-    #area_textoDireita{
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-
     }
 
     .botao_audio{
@@ -488,17 +485,44 @@ body{
         width: 100%;
     }
 
-    #img_informacaoEsquerda{
+/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 280px;
+        margin-bottom: 1180px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
         width: 100%;
     }
-    
-    #img_informacaoDireita{
+
+    .areaTexto_impedimento{
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
         width: 100%;
+    }
+
+    .areaImg_impedimento{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        width: 100%;
+    }    
+
+    .img_impedimento{
+        width: 100%
     }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
     #conteinner_intervalo{
         width: 100%;
+        margin-bottom: 520px;
+        /*Se o conteinner intervalo estiver colado no rodapé ajuste nesse ID e apague o margin-top do rodapé*/
     }
 
     #intervalo{
@@ -527,7 +551,6 @@ body{
 /*ÁREA DO RODAPÉ "SOBRE"*/
     #conteinner_rodape{
         width: 100%;
-        margin-top: 580px;
     }
     
     #rodape_sobre{
@@ -604,11 +627,11 @@ body{
         padding: 0;
     }
 
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
     #conteinner_informacoes{
         width: 100%;
-        gap: 420px;
-        margin-bottom: 2650px;
+        gap: 220px;
+        margin-bottom: 3150px;
     }
 
     .title_secao{
@@ -621,6 +644,18 @@ body{
         height: 600px;
     }
 
+    #informacao1{
+        margin-bottom: 80px;
+    }
+
+    #informacao2{
+        margin-bottom: 180px;
+    }
+
+    #informacao3{
+        margin-bottom: 210px;
+    }
+
     .area_texto{
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -629,24 +664,6 @@ body{
         width: 100%;
         font-size: 25px;
         margin-bottom: 180px;
-    }
-
-    #area_textoEsquerda{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        border-bottom: none;
-    }
-
-    #area_textoDireita{
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-
     }
 
     .botao_audio{
@@ -666,17 +683,47 @@ body{
         width: 100%;
     }
 
-    #img_informacaoEsquerda{
+/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 220px;
+        margin-bottom: 1000px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
         width: 100%;
     }
-    
-    #img_informacaoDireita{
+
+    #impedimento1{
+        margin-bottom: 100px;
+    }
+
+    .areaTexto_impedimento{
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
         width: 100%;
+    }
+
+    .areaImg_impedimento{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        width: 100%;
+    }    
+
+    .img_impedimento{
+        width: 100%
     }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
     #conteinner_intervalo{
         width: 100%;
+        margin-bottom: 350px;
     }
 
     #intervalo{
@@ -705,7 +752,6 @@ body{
 /*ÁREA DO RODAPÉ "SOBRE"*/
     #conteinner_rodape{
         width: 100%;
-        margin-top: 420px;
     }
     
     #rodape_sobre{
@@ -723,9 +769,9 @@ body{
     }
 
  /*ÁREA DA BARRA INICIAL*/
- #barra_inicial{
-    width: 100%;
-    margin-bottom: 50px;
+    #barra_inicial{
+        width: 100%;
+        margin-bottom: 50px;
 }   
 
 /*ÁREA DO BANNER*/
@@ -782,11 +828,11 @@ body{
         margin-left: 38%;
     }
 
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
     #conteinner_informacoes{
         width: 100%;
-        gap: 480px;
-        margin-bottom: 2850px;
+        gap: 300px;
+        margin-bottom: 3450px;
     }
 
     .title_secao{
@@ -799,6 +845,18 @@ body{
         height: 600px;
     }
 
+    #informacao1{
+        margin-bottom: 80px;
+    }
+
+    #informacao2{
+        margin-bottom: 200px;
+    }
+
+    #informacao3{
+        margin-bottom: 200px;
+    }
+
     .area_texto{
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -807,24 +865,6 @@ body{
         width: 100%;
         font-size: 28px;
         margin-bottom: 180px;
-    }
-
-    #area_textoEsquerda{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        border-bottom: none;
-    }
-
-    #area_textoDireita{
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-
     }
 
     .botao_audio{
@@ -844,17 +884,47 @@ body{
         width: 100%;
     }
 
-    #img_informacaoEsquerda{
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 220px;
+        margin-bottom: 1000px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
         width: 100%;
     }
-    
-    #img_informacaoDireita{
+
+    #impedimento1{
+        margin-bottom: 100px;
+    }
+
+    .areaTexto_impedimento{
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
         width: 100%;
+    }
+
+    .areaImg_impedimento{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        width: 100%;
+    }    
+
+    .img_impedimento{
+        width: 100%
     }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
     #conteinner_intervalo{
         width: 100%;
+        margin-bottom: 400px;
     }
 
     #intervalo{
@@ -885,7 +955,6 @@ body{
 /*ÁREA DO RODAPÉ "SOBRE"*/
     #conteinner_rodape{
         width: 100%;
-        margin-top: 420px;
     }
     
     #rodape_sobre{
@@ -907,26 +976,6 @@ body{
     #barra_inicial{
         width: 100%;
         margin-bottom: 60px;
-    }
-    
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 350px;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
     }
 
 /*ÁREA DO BANNER*/
@@ -963,11 +1012,31 @@ body{
         padding: 0;
     }
 
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 350px;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
+    }
+
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
     #conteinner_informacoes{
         width: 100%;
-        gap: 550px;
-        margin-bottom: 2920px;
+        gap: 410px;
+        margin-bottom: 3580px;
     }
 
     .title_secao{
@@ -990,23 +1059,6 @@ body{
         margin-bottom: 220px;
     }
 
-    #area_textoEsquerda{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        margin-bottom: 50px;
-    }
-
-    #area_textoDireita{
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-
     .botao_audio{
         margin-left: 200px;
     }
@@ -1024,17 +1076,51 @@ body{
         width: 100%;
     }
 
-    #img_informacaoEsquerda{
+    #informacao2{
+        margin-bottom: 120px;
+    }
+
+    #informacao3{
+        margin-bottom: 150px;
+    }
+
+/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 320px;
+        margin-bottom: 1020px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
         width: 100%;
     }
-    
-    #img_informacaoDireita{
+
+    .areaTexto_impedimento{
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+    }
+
+    .areaImg_impedimento{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        width: 100%;
+    }    
+
+    .img_impedimento{
         width: 100%;
     }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
     #conteinner_intervalo{
         width: 100%;
+        margin-bottom: 300px;
     }
 
     #intervalo{
@@ -1065,7 +1151,7 @@ body{
 /*ÁREA DO RODAPÉ "SOBRE"*/
     #conteinner_rodape{
         width: 100%;
-        margin-top: 380px;
+
     }
     
     #rodape_sobre{
@@ -1077,7 +1163,7 @@ body{
 }
 
 /*TELA TABLET*/
-@media (min-width: 700px) and (max-width:800px){
+@media (min-width: 700px) and (max-width:900px){
  /*ÁREA DA BARRA INICIAL*/
     #barra_inicial{
         width: 100%;
@@ -1102,12 +1188,33 @@ body{
         background-color: transparent;
         width: 100%;
         padding-inline: 0;
-        gap: 32px;
+        gap: 20px;
     }
 
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+/*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 100%;
+        height: 300px;
+        overflow: auto;
+        margin-top: -80px;
+    }
+
+    .botao_fecharDialog{
+        margin-left: 90%;
+    }
+
+    .paragrafo_dialog{
+        margin-top: -20px;
+    }
+
+    .botao_audioDialog{
+        margin-left: 38%;
+    }
+
+/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
     #conteinner_informacoes{
         width: 100%;
+        margin-bottom: 1300px
     }
 
     .title_secao{
@@ -1117,14 +1224,7 @@ body{
 
     .area_texto{
         font-size: 23px;
-    }
-
-    #area_textoEsquerda{
-        width: 100%;
-    }
-
-    #area_textoDireita{
-        width: 100%;
+        font-size: 30px;
     }
 
     .botao_audio{
@@ -1139,12 +1239,37 @@ body{
         width: 100%;
     }
 
-    #img_informacaoEsquerda{
-        width: 220px;
+/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 100px;
+        margin-bottom: 500px;
     }
-    
-    #img_informacaoDireita{
-        width: 220px;
+
+    .impedimento{
+        width: 100%;
+    }
+
+    .areaTexto_impedimento{
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+        font-size: 30px;
+    }
+
+    .areaImg_impedimento{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        width: 100%;
+    }    
+
+    .img_impedimento{
+        width: 100%;
     }
 
 /*ÁREA "INTERVALO DE DOAÇÕES"*/
@@ -1155,10 +1280,12 @@ body{
 
     #intervalo_homens{
         width: 100%;
+        font-size: 30px;
     }
     
     #intervalo_mulheres{
         width: 100%;
+        font-size: 30px;
     }
 
 /*ÁREA DO RODAPÉ "SOBRE"*/
@@ -1167,6 +1294,6 @@ body{
     }
     
     #rodape_sobre{
-        font-size: 25px;
+        font-size: 20px;
     } 
 }
