--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -196,6 +196,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: darkred;
     color: white;
     border-top-left-radius: 30px;
