adicionando os botões de áudio nos conteúdos(requisitos, impedimentos temporários e definitivos) falta adicionar a funcionalidade.

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -373,939 +373,27 @@ body{
     color: inherit;
 }
 
-/*TELA SMARTPHONE*/
-@media (max-width:350px){
-    body{
-        gap: 100px;
-    }
 
- /*ÁREA DA BARRA INICIAL*/
-    #barra_inicial{
-        width: 100%;
-        margin-bottom: -40px;
-    }   
-
-/*ÁREA DO BANNER*/
-    #banner{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #texto_banner{
-        font-size: 15px;
-        text-align: center;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        padding-left: 0;
-    }
-
-    .imagem_banner{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        width: 100%;
-    }
-
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 250px;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
-    }
-
- /*ÁREA DOS REQUISITOS*/   
-    #conteinner_requisitos{
-        background-color: transparent;
-        flex-direction: column;
-        width: 100%;
-        gap: 150px;
-        margin-bottom: 900px;
-        padding: 0;
-    }
-    
-/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
+/*Monitores Desktop e Laptops*/
+@media (min-width: 1200px) and (max-width: 1290px) {
     #conteinner_informacoes{
-        width: 100%;
-        gap: 150px;
-        margin-bottom: 2950px;
+        margin-bottom: 1400px;
     }
 
-    .title_secao{
-        width: 100%;
-        margin-bottom: 150px;
-    }
-
-    .informacao{
-        flex-direction: column-reverse;
-        height: 600px;
-    }
-
-    #informacao2{
-        margin-bottom: 100px;
-    }
-
-    #informacao3{
-        margin-bottom: 280px;
-    }
-
-    .area_texto{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        font-size: 22px;
-        margin-bottom: 180px;
-    }
-
-    .botao_audio{
-        margin-left: 200px;
-    }
-
-    .area_img{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }
-
-    .img_informacao{
-        width: 100%;
-    }
-
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
     #conteinner_impedimentos{
-        width: 100%;
-        gap: 250px;
-        margin-bottom: 1120px;
-    }
-
-    .impedimento{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    .areaTexto_impedimento{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-    }
-
-    .areaImg_impedimento{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }    
-
-    .img_impedimento{
-        width: 100%
-    }
-
-/*ÁREA "INTERVALO DE DOAÇÕES"*/
-    #conteinner_intervalo{
-        width: 100%;
-        margin-bottom: 520px;
-        /*Se o conteinner intervalo estiver colado no rodapé ajuste nesse ID e apague o margin-top do rodapé*/
-    }
-
-    #intervalo{
-        flex-direction: column;
-        gap: 120px;
-    }
-
-    #intervalo_homens{
-        margin-top: -200px;
-        margin-bottom: -120px;
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-    
-    #intervalo_mulheres{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-    }
-
-/*ÁREA DO RODAPÉ "SOBRE"*/
-    #conteinner_rodape{
-        width: 100%;
-    }
-    
-    #rodape_sobre{
-        text-align: center;
-        flex-direction: column;
-        gap: 40px;
-        font-size: 22px;
-    }
-}
-
-/*TELA SMARTPHONE*/
-@media (min-width:351px) and (max-width:375px) {
-    body{
-        gap: 100px;
-    }
-
- /*ÁREA DA BARRA INICIAL*/
- #barra_inicial{
-    width: 100%;
-    margin-bottom: 50px;
-}   
-
-/*ÁREA DO BANNER*/
-    #banner{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #texto_banner{
-        font-size: 18px;
-        text-align: center;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        padding-left: 0;
-    }
-
-    .imagem_banner{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        width: 100%;
-    }
-
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 300px;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
-    }
-
-/*ÁREA DOS REQUISITOS*/   
-    #conteinner_requisitos{
-        background-color: transparent;
-        flex-direction: column;
-        width: 100%;
-        gap: 150px;
-        margin-bottom: 900px;
-        padding: 0;
-    }
-
-/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
-    #conteinner_informacoes{
-        width: 100%;
-        gap: 180px;
-        margin-bottom: 2900px;
-    }
-
-    .title_secao{
-        width: 100%;
-        margin-bottom: 220px;
-    }
-
-    .informacao{
-        flex-direction: column-reverse;
-        height: 600px;
-    }
-
-    #informacao1{
-        margin-top: -10px;
-        margin-bottom: 0px;
-    }
-
-    #informacao2{
-        margin-bottom: 100px;
-    }
-
-    #informacao3{
-        margin-bottom: 250px;
-    }
-
-    .area_texto{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        font-size: 25px;
-        margin-bottom: 180px;
-    }
-
-    .botao_audio{
-        margin-left: 200px;
-    }
-
-    .area_img{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }
-
-    .img_informacao{
-        width: 100%;
-    }
-
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
-    #conteinner_impedimentos{
-        width: 100%;
-        gap: 220px;
-        margin-bottom: 1000px;
-    }
-
-    .impedimento{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #impedimento1{
-        margin-bottom: 100px;
-    }
-
-    .areaTexto_impedimento{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-    }
-
-    .areaImg_impedimento{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }    
-
-    .img_impedimento{
-        width: 100%
-    }
-
-/*ÁREA "INTERVALO DE DOAÇÕES"*/
-    #conteinner_intervalo{
-        width: 100%;
         margin-bottom: 350px;
     }
-
-    #intervalo{
-        flex-direction: column;
-        gap: 120px;
-    }
-
-    #intervalo_homens{
-        margin-top: -220px;
-        margin-bottom: -120px;
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-    
-    #intervalo_mulheres{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-    }
-
-/*ÁREA DO RODAPÉ "SOBRE"*/
-    #conteinner_rodape{
-        width: 100%;
-    }
-    
-    #rodape_sobre{
-        text-align: center;
-        flex-direction: column;
-        gap: 40px;
-        font-size: 25px;
-    }
 }
 
-/*TELA SMARTPHONE*/
-@media (min-width:380px) and (max-width:400px){
-    body{
-        gap: 100px;
-    }
-
- /*ÁREA DA BARRA INICIAL*/
-    #barra_inicial{
-        width: 100%;
-        margin-bottom: 50px;
-}   
-
-/*ÁREA DO BANNER*/
-    #banner{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #texto_banner{
-        font-size: 18px;
-        text-align: center;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        padding-left: 0;
-    }
-
-    .imagem_banner{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        width: 100%;
-    }
-
-/*ÁREA DOS REQUISITOS*/   
-    #conteinner_requisitos{
-        background-color: transparent;
-        flex-direction: column;
-        width: 100%;
-        gap: 150px;
-        margin-bottom: 900px;
-        padding: 0;
-    }
-
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 320px;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
-    }
-
-/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
+/*Monitores Desktop e Laptops*/
+@media (min-width: 1300px) and (max-width: 1380px) {
     #conteinner_informacoes{
-        width: 100%;
-        gap: 250px;
-        margin-bottom: 3200px;
+        margin-bottom: 1590px;
     }
 
-    .title_secao{
-        width: 100%;
-        margin-bottom: 220px;
-    }
-
-    .informacao{
-        flex-direction: column-reverse;
-        height: 600px;
-    }
-
-    #informacao1{
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
-
-    #informacao2{
-        margin-bottom: 180px;
-    }
-
-    #informacao3{
-        margin-bottom: 220px;
-    }
-
-    .area_texto{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        font-size: 28px;
-        margin-bottom: 180px;
-    }
-
-    .botao_audio{
-        margin-left: 200px;
-    }
-
-    .area_img{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }
-
-    .img_informacao{
-        width: 100%;
-    }
-
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
     #conteinner_impedimentos{
-        width: 100%;
-        gap: 250px;
-        margin-bottom: 1090px;
+        margin-bottom: 550px;
     }
-
-    .impedimento{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #impedimento1{
-        margin-bottom: 80px;
-    }
-
-    .areaTexto_impedimento{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-    }
-
-    .areaImg_impedimento{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }    
-
-    .img_impedimento{
-        width: 100%
-    }
-
-/*ÁREA "INTERVALO DE DOAÇÕES"*/
-    #conteinner_intervalo{
-        width: 100%;
-        margin-bottom: 400px;
-    }
-
-    #intervalo{
-        flex-direction: column;
-        gap: 120px;
-    }
-
-    #intervalo_homens{
-        margin-top: -220px;
-        margin-bottom: -120px;
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        font-size: 27px;
-    }
-    
-    #intervalo_mulheres{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        font-size: 27px;
-    }
-
-/*ÁREA DO RODAPÉ "SOBRE"*/
-    #conteinner_rodape{
-        width: 100%;
-    }
-    
-    #rodape_sobre{
-        text-align: center;
-        flex-direction: column;
-        gap: 40px;
-        font-size: 28px;
-    }
-}
-
-
-/*TELA SMARTPHONE*/
-@media (min-width:401px) and (max-width:500px){
-    body{
-        gap: 100px;
-    }
-
- /*ÁREA DA BARRA INICIAL*/
-    #barra_inicial{
-        width: 100%;
-        margin-bottom: 60px;
-    }
-
-/*ÁREA DO BANNER*/
-    #banner{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    #texto_banner{
-        font-size: 18px;
-        text-align: center;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        padding-left: 0;
-    }
-
-    .imagem_banner{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        width: 100%;
-    }
-
-/*ÁREA DOS REQUISITOS*/   
-    #conteinner_requisitos{
-        background-color: transparent;
-        flex-direction: column;
-        width: 100%;
-        gap: 150px;
-        margin-bottom: 900px;
-        padding: 0;
-    }
-
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 350px;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
-    }
-
-/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
-    #conteinner_informacoes{
-        width: 100%;
-        gap: 410px;
-        margin-bottom: 3580px;
-    }
-
-    .title_secao{
-        width: 100%;
-        margin-bottom: 200px;
-    }
-
-    .informacao{
-        flex-direction: column-reverse;
-        height: 600px;
-    }
-
-    .area_texto{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        font-size: 28px;
-        margin-bottom: 220px;
-    }
-
-    .botao_audio{
-        margin-left: 200px;
-    }
-
-    .area_img{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }
-
-    .img_informacao{
-        width: 100%;
-    }
-
-    #informacao2{
-        margin-bottom: 120px;
-    }
-
-    #informacao3{
-        margin-bottom: 150px;
-    }
-
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
-    #conteinner_impedimentos{
-        width: 100%;
-        gap: 320px;
-        margin-bottom: 1020px;
-    }
-
-    .impedimento{
-        flex-direction: column-reverse;
-        width: 100%;
-    }
-
-    .areaTexto_impedimento{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-    }
-
-    .areaImg_impedimento{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }    
-
-    .img_impedimento{
-        width: 100%;
-    }
-
-/*ÁREA "INTERVALO DE DOAÇÕES"*/
-    #conteinner_intervalo{
-        width: 100%;
-        margin-bottom: 300px;
-    }
-
-    #intervalo{
-        flex-direction: column;
-        gap: 120px;
-    }
-
-    #intervalo_homens{
-        margin-top: -220px;
-        margin-bottom: -120px;
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        font-size: 27px;
-    }
-    
-    #intervalo_mulheres{
-        width: 100%;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        font-size: 27px;
-    }
-
-/*ÁREA DO RODAPÉ "SOBRE"*/
-    #conteinner_rodape{
-        width: 100%;
-
-    }
-    
-    #rodape_sobre{
-        text-align: center;
-        flex-direction: column;
-        gap: 40px;
-        font-size: 28px;
-    }
-}
-
-/*TELA TABLET*/
-@media (min-width: 700px) and (max-width:900px){
- /*ÁREA DA BARRA INICIAL*/
-    #barra_inicial{
-        width: 100%;
-    }   
-
-/*ÁREA DO BANNER*/
-    #banner{
-        width: 100%;
-    }
-
-    #texto_banner{
-        font-size: 18px;
-    }
-
-    .imagem_banner{
-        width: 450px;
-        height: 500px;
-    }
-
-/*ÁREA DOS REQUISITOS*/   
-    #conteinner_requisitos{
-        background-color: transparent;
-        width: 100%;
-        padding-inline: 0;
-        gap: 20px;
-    }
-
-/*ÁREA DO MODAL (POPUP)*/
-    .dialog{
-        width: 100%;
-        height: 300px;
-        overflow: auto;
-        margin-top: -80px;
-    }
-
-    .botao_fecharDialog{
-        margin-left: 90%;
-    }
-
-    .paragrafo_dialog{
-        margin-top: -20px;
-    }
-
-    .botao_audioDialog{
-        margin-left: 38%;
-    }
-
-/*ÁREA "IMPEDIMENTOS TEMPORÁRIOS"*/
-    #conteinner_informacoes{
-        width: 100%;
-        margin-bottom: 1280px
-    }
-
-    .title_secao{
-        width: 100%;
-    }
-
-
-    .area_texto{
-        font-size: 23px;
-        font-size: 30px;
-    }
-
-    .botao_audio{
-        margin-left: 220px;
-    }
-
-    .area_img{
-        width: 600px;
-    }
-
-    .img_informacao{
-        width: 100%;
-    }
-
-/*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
-    #conteinner_impedimentos{
-        width: 100%;
-        gap: 100px;
-        margin-bottom: 500px;
-    }
-
-    .impedimento{
-        width: 100%;
-    }
-
-    .areaTexto_impedimento{
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-        width: 100%;
-        font-size: 30px;
-    }
-
-    .areaImg_impedimento{
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-        width: 100%;
-    }    
-
-    .img_impedimento{
-        width: 100%;
-    }
-
-/*ÁREA "INTERVALO DE DOAÇÕES"*/
-    #conteinner_intervalo{
-        margin-top: -380px;
-        width: 100%;
-    }
-
-    #intervalo_homens{
-        width: 100%;
-        font-size: 28px;
-    }
-    
-    #intervalo_mulheres{
-        width: 100%;
-        font-size: 28px;
-    }
-
-/*ÁREA DO RODAPÉ "SOBRE"*/
-    #conteinner_rodape{
-        width: 100%;
-    }
-    
-    #rodape_sobre{
-        font-size: 20px;
-    } 
 }
