--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -373,6 +373,691 @@ body{
     color: inherit;
 }
 
+/*Telas de Smartphones*/
+@media (min-width: 320px) and (max-width: 340px) {
+    body{
+        gap: 0
+    }
+    
+    #barra_inicial{
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    /*ÁREA DO BANNER*/
+
+    #banner{
+        width: 100%;
+        flex-direction: column-reverse;
+        margin-bottom: 100px;
+    }
+
+    #texto_banner{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        text-align: center;
+        font-size: 15px;
+        padding: 0;
+    }
+
+    .imagem_banner{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px
+    }
+
+    /*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 100%;
+        padding: 0;
+    }
+
+    .botao_fecharDialog{
+        margin-top: 5px;
+        margin-left: 80%;
+    }
+
+    .botao_audioDialog{
+        margin-left: 70%;
+    }
+
+    /*ÁREA REQUISITOS*/
+    #conteinner_requisitos{
+        width: 100%;
+        flex-direction: column;
+        gap: 150px;
+        margin-bottom: 1000px;
+        padding: 0;
+        background-color: transparent;
+    }
+
+    /*ÁREA "IMPEDIMENTOS TEMPORÁRIOS*/
+    #conteinner_informacoes{
+        width: 100%;
+        gap: 400px;
+        margin-bottom: 3080px;
+    }
+
+    .title_secao{
+        width: 100%;
+    }
+
+    .informacao{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+
+    .area_texto{
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+    }
+
+    .botao_audio{
+        margin-left: 70%;
+    }
+
+    .area_img{
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        width: 100%;
+    }
+
+    .img_informacao{
+        width: 100%;
+        border-radius: 0;
+    }
+
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 380px;
+        margin-bottom: 1380px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    #impedimento1{
+        margin-top: 50px;
+    }
+
+    .areaTexto_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .areaImg_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .img_impedimento{
+        width: 100%;
+    }
+
+    /*ÁREA "INTERVALO DE DOAÇÕES"*/
+    #conteinner_intervalo{
+        width: 100%;
+        margin-bottom: 650px;
+    }
+
+    #intervalo{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #intervalo_homens{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    #intervalo_mulheres{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    /*ÁREA DO RODAPÉ "SOBRE"*/
+    #conteinner_rodape{
+        width: 100%;
+        
+    }
+
+    #rodape_sobre{
+        gap: 50px;
+        flex-direction: column;
+        text-align: center;
+        font-size: 25px;
+    }
+}
+
+
+@media (min-width: 341px) and (max-width: 360px) {
+    body{
+        gap: 0
+    }
+    
+    #barra_inicial{
+        width: 100%;
+        margin-bottom: 100px;
+    }
+
+    /*ÁREA DO BANNER*/
+
+    #banner{
+        width: 100%;
+        flex-direction: column-reverse;
+        margin-bottom: 100px;
+    }
+
+    #texto_banner{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        text-align: center;
+        font-size: 18px;
+        padding: 0;
+    }
+
+    .imagem_banner{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px
+    }
+
+    /*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 100%;
+        padding: 0;
+    }
+
+    .botao_fecharDialog{
+        margin-top: 5px;
+        margin-left: 80%;
+    }
+
+    .botao_audioDialog{
+        margin-left: 70%;
+    }
+
+    /*ÁREA REQUISITOS*/
+    #conteinner_requisitos{
+        width: 100%;
+        flex-direction: column;
+        gap: 150px;
+        margin-bottom: 950px;
+        padding: 0;
+        background-color: transparent;
+    }
+
+    /*ÁREA "IMPEDIMENTOS TEMPORÁRIOS*/
+    #conteinner_informacoes{
+        width: 100%;
+        gap: 450px;
+        margin-bottom: 3280px;
+    }
+
+    .title_secao{
+        width: 100%;
+    }
+
+    .informacao{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+
+    .area_texto{
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+    }
+
+    .botao_audio{
+        margin-left: 70%;
+    }
+
+    .area_img{
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        width: 100%;
+    }
+
+    .img_informacao{
+        width: 100%;
+        border-radius: 0;
+    }
+
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 420px;
+        margin-bottom: 1480px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    #impedimento1{
+        margin-top: 50px;
+    }
+
+    .areaTexto_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .areaImg_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .img_impedimento{
+        width: 100%;
+    }
+
+    /*ÁREA "INTERVALO DE DOAÇÕES"*/
+    #conteinner_intervalo{
+        width: 100%;
+        margin-bottom: 650px;
+    }
+
+    #intervalo{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #intervalo_homens{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    #intervalo_mulheres{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    /*ÁREA DO RODAPÉ "SOBRE"*/
+    #conteinner_rodape{
+        width: 100%;
+        
+    }
+
+    #rodape_sobre{
+        gap: 50px;
+        flex-direction: column;
+        text-align: center;
+        font-size: 25px;
+    }
+}
+
+@media (min-width: 361px) and (max-width: 380px) {
+    body{
+        gap: 0
+    }
+    
+    #barra_inicial{
+        width: 100%;
+        margin-bottom: 100px;
+    }
+
+    /*ÁREA DO BANNER*/
+
+    #banner{
+        width: 100%;
+        flex-direction: column-reverse;
+        margin-bottom: 100px;
+    }
+
+    #texto_banner{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        text-align: center;
+        font-size: 18px;
+        padding: 0;
+    }
+
+    .imagem_banner{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px
+    }
+
+    /*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 100%;
+        padding: 0;
+    }
+
+    .botao_fecharDialog{
+        margin-top: 5px;
+        margin-left: 80%;
+    }
+
+    .botao_audioDialog{
+        margin-left: 70%;
+    }
+
+    /*ÁREA REQUISITOS*/
+    #conteinner_requisitos{
+        width: 100%;
+        flex-direction: column;
+        gap: 150px;
+        margin-bottom: 1000px;
+        padding: 0;
+        background-color: transparent;
+    }
+
+    /*ÁREA "IMPEDIMENTOS TEMPORÁRIOS*/
+    #conteinner_informacoes{
+        width: 100%;
+        gap: 450px;
+        margin-bottom: 3300px;
+    }
+
+    .title_secao{
+        width: 100%;
+    }
+
+    .informacao{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+
+    .area_texto{
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+    }
+
+    .botao_audio{
+        margin-left: 70%;
+    }
+
+    .area_img{
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        width: 100%;
+    }
+
+    .img_informacao{
+        width: 100%;
+        border-radius: 0;
+    }
+
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 420px;
+        margin-bottom: 1480px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    #impedimento1{
+        margin-top: 50px;
+    }
+
+    .areaTexto_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .areaImg_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .img_impedimento{
+        width: 100%;
+    }
+
+    /*ÁREA "INTERVALO DE DOAÇÕES"*/
+    #conteinner_intervalo{
+        width: 100%;
+        margin-bottom: 650px;
+    }
+
+    #intervalo{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #intervalo_homens{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    #intervalo_mulheres{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    /*ÁREA DO RODAPÉ "SOBRE"*/
+    #conteinner_rodape{
+        width: 100%;
+        
+    }
+
+    #rodape_sobre{
+        gap: 50px;
+        flex-direction: column;
+        text-align: center;
+        font-size: 25px;
+    }
+}
+
+@media (min-width: 381px) and (max-width: 400px) {
+    body{
+        gap: 0
+    }
+    
+    #barra_inicial{
+        width: 100%;
+        margin-bottom: 120px;
+    }
+
+    /*ÁREA DO BANNER*/
+
+    #banner{
+        width: 100%;
+        flex-direction: column-reverse;
+        margin-bottom: 100px;
+    }
+
+    #texto_banner{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        text-align: center;
+        font-size: 18px;
+        padding: 0;
+    }
+
+    .imagem_banner{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px
+    }
+
+    /*ÁREA DO MODAL (POPUP)*/
+    .dialog{
+        width: 100%;
+        padding: 0;
+    }
+
+    .botao_fecharDialog{
+        margin-top: 5px;
+        margin-left: 80%;
+    }
+
+    .botao_audioDialog{
+        margin-left: 70%;
+    }
+
+    /*ÁREA REQUISITOS*/
+    #conteinner_requisitos{
+        width: 100%;
+        flex-direction: column;
+        gap: 150px;
+        margin-bottom: 1000px;
+        padding: 0;
+        background-color: transparent;
+    }
+
+    /*ÁREA "IMPEDIMENTOS TEMPORÁRIOS*/
+    #conteinner_informacoes{
+        width: 100%;
+        gap: 450px;
+        margin-bottom: 3300px;
+    }
+
+    .title_secao{
+        width: 100%;
+    }
+
+    .informacao{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+
+    .area_texto{
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        width: 100%;
+    }
+
+    .botao_audio{
+        margin-left: 70%;
+    }
+
+    .area_img{
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        width: 100%;
+    }
+
+    .img_informacao{
+        width: 100%;
+        border-radius: 0;
+    }
+
+    /*ÁREA "IMPEDIMENTOS DEFINITIVOS"*/
+    #conteinner_impedimentos{
+        width: 100%;
+        gap: 420px;
+        margin-bottom: 1480px;
+    }
+
+    .impedimento{
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+
+    #impedimento1{
+        margin-top: 50px;
+    }
+
+    .areaTexto_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .areaImg_impedimento{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .img_impedimento{
+        width: 100%;
+    }
+
+    /*ÁREA "INTERVALO DE DOAÇÕES"*/
+    #conteinner_intervalo{
+        width: 100%;
+        margin-bottom: 650px;
+    }
+
+    #intervalo{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #intervalo_homens{
+        width: 100%;
+        border-radius: 0;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    #intervalo_mulheres{
+        width: 100%;
+        border-radius: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    /*ÁREA DO RODAPÉ "SOBRE"*/
+    #conteinner_rodape{
+        width: 100%;
+        
+    }
+
+    #rodape_sobre{
+        gap: 50px;
+        flex-direction: column;
+        text-align: center;
+        font-size: 25px;
+    }
+}
 
 /*Monitores Desktop e Laptops*/
 @media (min-width: 1200px) and (max-width: 1290px) {
